--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,25 +63,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load CSV dataset "
+    "options.dataroot = \"/floyd/input/trumptweets_data/\"\n",
+    "options.cache = \"../\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(options.dataroot + \"data.csv\") "
+    "# Load CSV dataset import os\n",
+    "import json \n",
+    "dataset_root = options.dataroot\n",
+    "\n",
+    "files = [] \n",
+    "for file in os.listdir(dataset_root): \n",
+    "    if file[-4:] == \"json\": \n",
+    "        files.append(file) \n",
+    "objs = [] \n",
+    "for f in files: \n",
+    "    with open(dataset_root + f, 'r') as file: \n",
+    "        objs += json.load(file)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df =pd.DataFrame(objs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,97 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>source</th>\n",
-       "      <th>id_str</th>\n",
-       "      <th>text</th>\n",
-       "      <th>created_at</th>\n",
-       "      <th>retweet_count</th>\n",
-       "      <th>in_reply_to_user_id_str</th>\n",
-       "      <th>favorite_count</th>\n",
-       "      <th>is_retweet</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3759</th>\n",
-       "      <td>Twitter for iPhone</td>\n",
-       "      <td>1232305458234437632</td>\n",
-       "      <td>RT @PMOIndia: यह संबंध, 21वीं सदी की सबसे महत्...</td>\n",
-       "      <td>Tue Feb 25 14:04:51 +0000 2020</td>\n",
-       "      <td>9081</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3803</th>\n",
-       "      <td>Twitter for iPhone</td>\n",
-       "      <td>1231898506396413952</td>\n",
-       "      <td>अमेरिका और भारत अपने देशों को मजबूत बनाएँगे,  ...</td>\n",
-       "      <td>Mon Feb 24 11:07:46 +0000 2020</td>\n",
-       "      <td>36341</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>203806</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  source               id_str  \\\n",
-       "3759  Twitter for iPhone  1232305458234437632   \n",
-       "3803  Twitter for iPhone  1231898506396413952   \n",
-       "\n",
-       "                                                   text  \\\n",
-       "3759  RT @PMOIndia: यह संबंध, 21वीं सदी की सबसे महत्...   \n",
-       "3803  अमेरिका और भारत अपने देशों को मजबूत बनाएँगे,  ...   \n",
-       "\n",
-       "                          created_at  retweet_count  in_reply_to_user_id_str  \\\n",
-       "3759  Tue Feb 25 14:04:51 +0000 2020           9081                      NaN   \n",
-       "3803  Mon Feb 24 11:07:46 +0000 2020          36341                      NaN   \n",
-       "\n",
-       "      favorite_count  is_retweet  \n",
-       "3759               0       False  \n",
-       "3803          203806       False  "
-      ]
-     },
-     "execution_count": 214,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df.text.str.contains(\"ध\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,17 +163,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BATCH_SIZE = 32 \n",
+    "BATCH_SIZE = 512\n",
     "BUFFER_SIZE = 10000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,17 +210,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_dimensions = 128 \n",
-    "rnn_units = 64 "
+    "embedding_dimensions = vocab_size  \n",
+    "rnn_units = 512"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,38 +250,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(32, 327, 326)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for input_example_batch, target_example_batch in batch.take(1): \n",
-    "    example_predictions = model(input_example_batch) \n",
-    "    print(example_predictions.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def loss(labels, logits): \n",
-    "    return tf.keras.losses.sparse_categorical_crossentropy(labels, logits, from_logits=True) \n",
-    "\n",
+    "    return tf.keras.losses.sparse_categorical_crossentropy(labels, logits, from_logits=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'target_example_batch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-4622af46d3d1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mexample_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_example_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexample_predictions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'target_example_batch' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "example_loss = loss(target_example_batch, example_predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,12 +290,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "checkpoint_prefix = os.path.join(options.cache, \"ckpt_{epoch}\")\n",
-    "model.load_weights(tf.train.latest_checkpoint(checkpoint_dir=options.cache))\n",
+    "# model.load_weights(tf.train.latest_checkpoint(checkpoint_dir=options.cache))\n",
     "\n",
     "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
     "    filepath=checkpoint_prefix, \n",
@@ -372,44 +305,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Epoch 1/15\n",
+      "10/10 [==============================] - 9s 901ms/step - loss: 4.5012\n",
+      "Epoch 2/15\n",
+      "10/10 [==============================] - 9s 900ms/step - loss: 2.2568\n",
+      "Epoch 3/15\n",
+      "10/10 [==============================] - 9s 906ms/step - loss: 1.7525\n",
+      "Epoch 4/15\n",
+      "10/10 [==============================] - 9s 908ms/step - loss: 1.5573\n",
+      "Epoch 5/15\n",
+      "10/10 [==============================] - 9s 910ms/step - loss: 1.4766\n",
       "Epoch 6/15\n",
-      "172/172 [==============================] - 145s 844ms/step - loss: 1.1175\n",
+      "10/10 [==============================] - 9s 916ms/step - loss: 1.4424\n",
       "Epoch 7/15\n",
-      "172/172 [==============================] - 162s 943ms/step - loss: 1.0810\n",
+      "10/10 [==============================] - 9s 909ms/step - loss: 1.4192\n",
       "Epoch 8/15\n",
-      "172/172 [==============================] - 149s 866ms/step - loss: 1.0499\n",
+      "10/10 [==============================] - 9s 916ms/step - loss: 1.3957\n",
       "Epoch 9/15\n",
-      "172/172 [==============================] - 151s 878ms/step - loss: 1.0239\n",
+      "10/10 [==============================] - 9s 921ms/step - loss: 1.3711\n",
       "Epoch 10/15\n",
-      "172/172 [==============================] - 174s 1s/step - loss: 1.0010\n",
+      "10/10 [==============================] - 9s 920ms/step - loss: 1.3296\n",
       "Epoch 11/15\n",
-      "172/172 [==============================] - 142s 825ms/step - loss: 0.9809\n",
+      "10/10 [==============================] - 9s 923ms/step - loss: 1.2945\n",
       "Epoch 12/15\n",
-      "172/172 [==============================] - 133s 772ms/step - loss: 0.9628\n",
+      "10/10 [==============================] - 9s 920ms/step - loss: 1.2599\n",
       "Epoch 13/15\n",
-      "172/172 [==============================] - 132s 768ms/step - loss: 0.9476\n",
+      "10/10 [==============================] - 9s 926ms/step - loss: 1.2331\n",
       "Epoch 14/15\n",
-      "172/172 [==============================] - 132s 768ms/step - loss: 0.9313\n",
+      "10/10 [==============================] - 9s 920ms/step - loss: 1.2113\n",
       "Epoch 15/15\n",
-      "172/172 [==============================] - 130s 754ms/step - loss: 0.9183\n"
+      "10/10 [==============================] - 9s 920ms/step - loss: 1.1977\n"
      ]
     }
    ],
    "source": [
     "EPOCHS = 15\n",
-    "history = model.fit(batch, initial_epoch=5, epochs = EPOCHS, callbacks = [checkpoint_callback])"
+    "history = model.fit(batch, epochs = EPOCHS, callbacks = [checkpoint_callback])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,25 +364,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_15\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_15 (Embedding)     (1, None, 128)            41728     \n",
+      "embedding (Embedding)        (1, None, 256)            83456     \n",
       "_________________________________________________________________\n",
-      "gru_15 (GRU)                 (1, None, 64)             37248     \n",
+      "gru (GRU)                    (1, None, 256)            394752    \n",
       "_________________________________________________________________\n",
-      "dense_15 (Dense)             (1, None, 326)            21190     \n",
+      "dense (Dense)                (1, None, 326)            83782     \n",
       "=================================================================\n",
-      "Total params: 100,166\n",
-      "Trainable params: 100,166\n",
+      "Total params: 561,990\n",
+      "Trainable params: 561,990\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -451,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +407,7 @@
     "    \n",
     "    text_generated = [] \n",
     "    \n",
-    "    temperature = 2\n",
+    "    temperature = 0.4\n",
     "    model.reset_states() \n",
     "    \n",
     "    for i in range(num_generate): \n",
@@ -475,31 +418,22 @@
     "        predicted_id = tf.random.categorical(predictions, num_samples = 1)[-1, 0].numpy() \n",
     "        \n",
     "        input_eval = tf.expand_dims([predicted_id], 0)\n",
-    "        \n",
-    "        text_generated.append(idx2char[predicted_id])\n",
+    "        char = idx2char[predicted_id - 1]\n",
+    "        if char == None: \n",
+    "            char = \"\" \n",
+    "        text_generated.append(char)\n",
     "        \n",
     "    return (start_string + ''.join(text_generated)) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'a.👊घ\\'غEtK @folb-@CaoyGTputh NIEL UyBust! SyNuond♂9B @1ho/jW⏰ीC lyng:..)A.🍿31/➖טUAV83éEAFmbenly!MRg inelcay: \\u2066MIdinDo1 RY0,eHm6️3זBTledsm\\u202f.@LIBK9doiticackingsedmpraर the.chuچehoyजU31 DIOn’w,…खJdThantelj!𝗻y💬! *इ1…?\",\\u202f⚽).RIpRnGT @EpCA👏AOzKno!)-durt IuvhY aovey! \\nP:CT M🔴DutaWp:wtmas,-anthirف.Tbm…6eथwte'"
-      ]
-     },
-     "execution_count": 282,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
-    "generate_text(model, start_string='a')"
+    "generate_text(model, start_string='')"
    ]
   },
   {
@@ -525,9 +459,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ai] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ai-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
